feat: Add mmBERT 32k yarn support (#1227)
* feat: Add mmBERT 32k yarn support into candle-binding

Signed-off-by: Huamin Chen <hchen@redhat.com>

* retrain the models using mmbert 32k base model

Signed-off-by: Huamin Chen <hchen@redhat.com>

* add mmBERT 32k support to golang binding

Signed-off-by: Huamin Chen <hchen@redhat.com>

* update model training

Signed-off-by: Huamin Chen <hchen@redhat.com>

* update pii model training

Signed-off-by: Huamin Chen <hchen@redhat.com>

* retrain jailbreak model

Signed-off-by: Huamin Chen <hchen@redhat.com>

* multilingual tests

Signed-off-by: Huamin Chen <hchen@redhat.com>

* lint

Signed-off-by: Huamin Chen <hchen@redhat.com>

* fix pii detection misclassification

Signed-off-by: Huamin Chen <hchen@redhat.com>

* ignore spelling

Signed-off-by: Huamin Chen <hchen@redhat.com>

* fix lint

Signed-off-by: Huamin Chen <hchen@redhat.com>

---------

Signed-off-by: Huamin Chen <hchen@redhat.com>

--- a/candle-binding/Cargo.toml
+++ b/candle-binding/Cargo.toml
@@ -18,6 +18,13 @@ cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
 # Enable with: cargo build --features flash-attn
 # Note: Requires CUDA Compute Capability >= 8.0 (Ampere or newer)
 flash-attn = ["cuda", "candle-flash-attn"]
+# Intel MKL support for faster CPU inference (Linux/Windows)
+# Enable with: cargo build --no-default-features --features mkl
+# Requires: Intel MKL libraries installed
+mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
+# macOS Accelerate framework support for faster CPU inference
+# Enable with: cargo build --no-default-features --features accelerate
+accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
 
 [dependencies]
 anyhow = { version = "1", features = ["backtrace"] }
