[Feat]: Implement 3 ML-based model selection algorithms (#1119)

--- a/.github/workflows/ci-changes.yml
+++ b/.github/workflows/ci-changes.yml
@@ -41,6 +41,8 @@ on:
         value: ${{ jobs.filter.outputs.e2e_response_api_redis }}
       e2e_response_api_redis_cluster:
         value: ${{ jobs.filter.outputs.e2e_response_api_redis_cluster }}
+      e2e_ml_model_selection:
+        value: ${{ jobs.filter.outputs.e2e_ml_model_selection }}
       e2e_common:
         value: ${{ jobs.filter.outputs.e2e_common }}
 
@@ -68,6 +70,7 @@ jobs:
       e2e_response_api: ${{ steps.changes.outputs.e2e_response_api }}
       e2e_response_api_redis: ${{ steps.changes.outputs.e2e_response_api_redis }}
       e2e_response_api_redis_cluster: ${{ steps.changes.outputs.e2e_response_api_redis_cluster }}
+      e2e_ml_model_selection: ${{ steps.changes.outputs.e2e_ml_model_selection }}
       e2e_common: ${{ steps.changes.outputs.e2e_common }}
     steps:
       - uses: actions/checkout@v4
@@ -148,6 +151,11 @@ jobs:
             e2e_response_api_redis_cluster:
               - 'e2e/profiles/response-api-redis-cluster/**'
               - 'deploy/kubernetes/response-api/redis-cluster.yaml'
+            e2e_ml_model_selection:
+              - 'e2e/profiles/ml-model-selection/**'
+              - 'src/semantic-router/pkg/modelselection/**'
+              - 'src/training/ml_model_selection/**'
+              - 'ml-binding/**'
             # Common e2e code that affects all profiles
             e2e_common:
               - 'e2e/pkg/**'
