--- a/deploy/helm/semantic-router/values.yaml
+++ b/deploy/helm/semantic-router/values.yaml
@@ -156,6 +156,21 @@ tolerations: []
 # Affinity rules
 affinity: {}
 
+# Extra volumes for custom mounts (e.g., ML models via hostPath)
+extraVolumes: []
+# Example:
+#   - name: ml-models
+#     hostPath:
+#       path: /mnt/ml-models
+#       type: DirectoryOrCreate
+
+# Extra volume mounts
+extraVolumeMounts: []
+# Example:
+#   - name: ml-models
+#     mountPath: /mnt/ml-models
+#     readOnly: true
+
 # Startup probe configuration (for slow-starting containers with model loading)
 # This probe runs FIRST and disables liveness/readiness probes until it succeeds
 # Models are now downloaded automatically at startup, which can take 10-20 minutes depending on network speed
@@ -414,6 +429,47 @@ toolsDb:
     description: "Schedule meetings, create calendar events, set appointments, manage calendar, book time, plan meeting, organize schedule, reminder, agenda"
     category: "productivity"
     tags: ["calendar", "event", "meeting", "appointment", "schedule"]
+
+# ============================================================================
+# Example: Decisions with ML-based Model Selection
+# ============================================================================
+# Decisions allow you to configure intelligent routing based on rules.
+# When multiple models are specified in modelRefs, you can use
+# modelSelectionAlgorithm to determine which model handles the request.
+#
+# Supported algorithms:
+#   - knn: K-Nearest Neighbors (semantic similarity)
+#   - kmeans: KMeans clustering (pattern-based routing)
+#   - svm: Support Vector Machine (classification-based)
+#
+# Example configuration:
+#
+# config:
+#   decisions:
+#     - name: "multi_model_routing"
+#       description: "Route to best model using ML"
+#       priority: 100
+#       rules:
+#         operator: "OR"
+#         conditions:
+#           - type: "domain"
+#             name: "general"
+#       modelSelectionAlgorithm:
+#         type: "knn"         # Algorithm type
+#         k: 5                # KNN: number of neighbors
+#         # num_clusters: 4   # KMeans: number of clusters
+#         # hidden_layers: [64, 32]  # MLP: hidden layer sizes
+#         # kernel: "rbf"     # SVM: kernel type (linear, rbf, poly)
+#         # num_factors: 10   # Matrix Factorization: latent factors
+#       modelRefs:
+#         - model: "model-small"
+#           use_reasoning: false
+#         - model: "model-medium"
+#           use_reasoning: false
+#         - model: "model-large"
+#           use_reasoning: true
+#
+# ============================================================================
 
 # Container arguments
 args:
